# skeleton-scagnostics

./: README.md
principal_curves/src/: #itkScatterplotDrawer.hxx#  #mds.cpp#  CMakeLists.txt  curve2d.cpp  curve2d.hpp  datagen.py  dataset.cpp  dataset.hpp  draw.cpp  draw.hpp  guimain.cpp  image2d.hpp  image2dio.hpp  itkScatterplotDrawer.h  itkScatterplotDrawer.hxx  main.cpp  mds.cpp  mds.hpp  multival.hpp  parsedata.cpp  parsedata.hpp  pipeline.cpp  pipeline.hpp  plotanalysis.cpp  plotanalysis.hpp  principalcurve.cpp  principalcurve.hpp  principalgraph.cpp  principalgraph.hpp  projection2d.cpp  projection2d.hpp  projectionlist.hpp  propagate2d.cpp  propagate2d.hpp  randomprojection.cpp  randomprojection.hpp  skeleton.cpp  skeleton.hpp  skeletongenerator.cxx  skeletongenerator.h  (+6 more)
principal_curves/src/cuda/: CMakeLists.txt  skelft.cu  skelft.h
principal_curves/src/gui/: global.hpp  imagecontroller.cpp  imagecontroller.hpp  plist.cpp  plist.hpp  projectionmatrix.cpp  projectionmatrix.hpp
principal_curves/src/skeleton/: field.h  skelftKernel.h  stack.h
principal_curves/src/tsne/: tsne.cpp  tsne.hpp
scagnostics/SPLOM/: cooccurrencecalculator.cxx  cooccurrencecalculator.h  freeformwidget.cxx  freeformwidget.h  freeformwidget.ui  mathhelper.cxx  mathhelper.h  memoization.cxx  memoization.h  skeletongenerator.cxx  skeletongenerator.h  skeletonvis.cxx  skeletonvis.h  splomwrapper.cxx  splomwrapper.h  statistics.cxx  statistics.h  transferfunction.cxx  transferfunction.h  wilkinsonscagnostics.cxx  wilkinsonscagnostics.h
